<resources>
    <string name="app_name" translatable="false">Money Watch</string>
    <string name="action_settings">Settings</string>

    <!-- Empty Menu Items -->
    <string name="empty_menu_list">No Information Available</string>
    <!-- Statement Items -->
    <string name="row_num">Sequence</string>
    <string name="row_date">Date</string>
    <string name="row_payee">Payee</string>
    <string name="row_cat">Category</string>
    <string name="row_amt">Amount</string>
    <string name="row_bal">Balance</string>
    <string name="row_description">Description</string>
    <string name="title_StatementActivity_detail">Statement</string>


    <string name="content_authority" translatable="false">com.personal.fbrigati.myfinance</string>
    <string name="empty_statement_list">Register your first transaction!</string>
    <string name="no_items_in_list">Set your first budget!</string>
    <string name="title_BudgetActivity_detail">Budget</string>
    <string name="budget_goal_label">Goal</string>
    <string name="budget_spent_label">Amount spent</string>
    <string name="title_StatsActivity_detail">Stats</string>
    <string name="sync_account_type" translatable="false">myfinance.exampl.com</string>
    <string name="empty_currencies_list">There are no available exchange rates, try another currency!</string>
    <string name="title_Currencies_detail">Currencies</string>
    <string name="cur_base_date_label">Info. Date:</string>
    <string name="cur_base_symbol_label">Base Currency:</string>


    <!-- Available Transaction Types -->
    <string-array name="trx_type">
        <item>Debit</item>
        <item>Credit</item>
    </string-array>

    <!-- free version currencies -->
    <string-array name="cur_symbols">
        <item>MZN</item>
        <item>USD</item>
        <item>ZAR</item>
        <item>EUR</item>
        <item>TZS</item>
        <item>AOA</item>
        <item>GHS</item>
        </string-array>



    <!-- Months in a year -->
    <string-array name="months">
        <item>JANUARY</item>
        <item>FEBRUARY</item>
        <item>MARCH</item>
        <item>APRIL</item>
        <item>MAY</item>
        <item>JUNE</item>
        <item>JULY</item>
        <item>AUGUST</item>
        <item>SEPTEMBER</item>
        <item>OCTOBER</item>
        <item>NOVEMBER</item>
        <item>DECEMBER</item>
    </string-array>


    <!-- Months in a year -->
    <string-array name="trimesters">
        <item>1st</item>
        <item>2nd</item>
        <item>3rd</item>
        <item>4th</item>
    </string-array>

    <!-- Days in a week -->
    <string-array name="dow">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>


    <!-- Categories -->
    <string-array name="categories">
        <item>Transportation</item>
        <item>Leisure</item>
        <item>Food</item>
        <item>Education</item>
        <item>HealthCare</item>
        <item>Groceries</item>
        <item>Rent</item>
    </string-array>



    <!-- Categories -->
    <string-array name="menu">
    <item>Statment</item>
    <item>Budget</item>
    <item>Stats</item>
    <item>Currencies</item>
    </string-array>


    <string name="pref_cur_key" translatable="false">cur_symbol</string>
    <string name="pref_cur_default" translatable="false">USD</string>

    <string name="pref_cur_status_key" translatable="false">cur-status</string>

    <string name="pref_cur_status_invalid">There was an error retrieving currnecie data for selected item, please try again.</string>

    <string name="pref_month_status" translatable="false">month-status</string>

    <string name="trans_amt_edit_hint">Amount</string>
    <string name="trans_desc_edit_hint">Description</string>
    <string name="title_trxEdit_detail">Transaction Details</string>
    <string name="date_picker" translatable="false">1/1/1979</string>
    <string name="accessibility_datepicker_btn">Date Picker</string>
    <string name="accessibility_timepicker_btn">Time Picker</string>
    <string name="edit_amount">Edit Amount</string>
    <string name="edit_description">Transaction Description</string>
    <string name="time_picker" translatable="false">10:48</string>

    <string name="category_spinner_prompt">Choose Category</string>
    <string name="accessibility_category_spinner">Choose Transaction Category</string>
    <string name="edit_trans_save_btn">Save</string>
    <string name="accessibility_saveTrans_btn">Save Transaction Details</string>
    <string name="edit_trans_close_btn">Close</string>
    <string name="trans_edit_category_label">Category</string>
    <string name="trans_edit_trxType_label">Transaction Type</string>
    <string name="empty_budget_list">Register Spendings to set budgets!</string>
    <string name="piechartspannabletext">Spendings</string>
    <string name="widget_todays_spendings">Total spending today:</string>
    <string name="widget_week_spendings">Total spending this week:</string>
    <string name="widget_month_spendings">Total for Month:</string>
    <string name="empty_widget">Start registering your spendings!</string>
    <string name="widget_top_label">Recently you\'ve spent:</string>


    <!-- AdMob ad unit IDs -->
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-1417812078063075/9560530149</string>
    <string name="banner_test" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="rectangle_ad_unit_id" translatable="false">ca-app-pub-1417812078063075/5560553025</string>
    <string name="toast_savetodbsuccess">New data saved successfully</string>
    <string name="toast_functionality_notimplemented">Functionality not implemented</string>
    <string name="toast_amount_notvalid">Amount not valid, please correct and try again</string>
    <string name="toast_check_desc_amt">Check description and/or amount before saving</string>
    <string name="toolbar_statement_title"></string>
    <string name="toolbar_budget_title">Budget</string>
    <string name="toolbar_stats_title">Stats Charts</string>
    <string name="toolbar_currencies_title">Currency Rates</string>
    <string name="accessibility_budget_icon">Budget Icon</string>
    <string name="accessibility_menu_icon">Menu icon</string>
    <string name="accessibility_statment_FAB">add transaction</string>
    <string name="dialog_delete_record_title">Delete Record</string>
    <string name="dialog_delete_record_message">Are you sure you want to delete this record?</string>
    <string name="dialog_delete_record_yes">yes</string>
    <string name="dialog_delete_record_no">no</string>
    <string name="toast_deleterecord_success">record deleted</string>
    <string name="toast_deleterecord_nosuccess">record was not deleted, please try again</string>
    <string name="pref_last_posting_date" translatable="false">postDate</string>
    <string name="pref_post_seq" translatable="false">postSequence</string>
    <string name="pref_stats_year_status" translatable="false">stat_year</string>
    <string name="pref_stats_trimester_status" translatable="false">stats_trimester</string>
    <string name="piechartLegedTitle">Spendings per Quarter</string>
    <string name="semester_label">Quarter</string>
    <string name="category_label">category</string>
    <string name="pref_stats_category_status" translatable="false">stats_category</string>
    <string name="toolbar_trxedit_title">Edit Transaction</string>
    <string name="trans_edit_datetitle_label">Transaction Date</string>
    <string name="trans_edit_timetitle_label">Transaction Time</string>
    <string name="linechartLegedTitle">Spendings per quarter per category</string>
    <string name="month_picker_back_btn">Month picker back button</string>
    <string name="main_app_logo">Money Watch Logo</string>
    <string name="month_picker_frwd_btn">Month picker forward button</string>
    <string name="statement_balance_lable">Balance :</string>
    <string name="dialog_budget_set_year">set for whole year</string>
    <string name="pref_year_status" translatable="false">year-status</string>
    <string name="dialog_instruction_show">do not show this again</string>
    <string name="OK">OK</string>
    <string name="pref_instruct_show_statement" translatable="false">instruct-show-statement</string>
    <string name="pref_instruct_show_budget" translatable="false">instruct-show-budget</string>
    <string name="pref_instruct_show_stats" translatable="false">instruct-show-stats</string>
    <string name="pref_instruct_show_currencies" translatable="false">instruct-show-currencies</string>
    <string name="dialog_instruction_title_budget">Budget Settings</string>
    <string name="dialog_instruction_text_budget">this is the instructions</string>
    <string name="dialog_instruction_title_statement">Statement</string>
    <string name="dialog_instruction_text_statement">This is the instructions for statement screen</string>
    <string name="dialog_instruction_title_stats">Stats</string>
    <string name="dialog_instruction_text_stats">This is the instructions for stats</string>
    <string name="dialog_instruction_title_currencies">Currencies</string>
    <string name="dialog_instruction_text_currencies">This is the instructions for currencies</string>
    <string name="menu_statement">Statement</string>
    <string name="menu_budget">Budget</string>
    <string name="menu_stats">Stats</string>
    <string name="menu_currencies">Currencies</string>
    <string name="in">in</string>


</resources>
