<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/widget"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/widget_margin"
    android:background="@color/primary_light">

    <FrameLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAppearance="@style/RateTextStyle"
            android:textColor="@color/icons"
            android:text="@string/app_name"
            tools:text="@string/app_name"/>

    </FrameLayout>

    <TextView
        android:id="@+id/top_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/widget_margin"
        android:textAppearance="@style/widgetTextStyle"
        android:text="@string/widget_top_label"
        tools:text="Recently you've spent: "
        android:layout_below="@id/app_bar"/>


    <ListView
        android:layout_below="@+id/top_label"
        android:id="@+id/widget_collection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="2"
        android:groupIndicator="@android:color/transparent"
        tools:targetApi="lollipop" />

    <GridLayout
        android:layout_below="@+id/widget_collection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2">


        <TextView
            android:id="@+id/widget_today_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
            android:padding="@dimen/widget_margin"
         android:textAppearance="@style/widgetTextStyle"
         android:text="@string/widget_todays_spendings"
         app:layout_columnWeight="1"
         tools:text="Total spending for today: "/>


        <TextView
            android:id="@+id/widget_amount_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/widget_margin"
            android:textAppearance="@style/widgetTextStyle"
            app:layout_columnWeight="1"
            tools:text="$ 00.00 "/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/widget_margin"
            android:textAppearance="@style/widgetTextStyle"
            android:text="@string/widget_week_spendings"
            app:layout_columnWeight="1"
            tools:text="Total spending for week: "/>

        <TextView
            android:id="@+id/widget_amount_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/widget_margin"
            android:textAppearance="@style/widgetTextStyle"
            app:layout_columnWeight="1"
            tools:text="$ 00.00 "/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/widget_margin"
            android:textAppearance="@style/widgetTextStyle"
            android:text="@string/widget_month_spendings"
            app:layout_columnWeight="1"
            tools:text="Total spending for month: "/>

        <TextView
            android:id="@+id/widget_amount_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/widget_margin"
            android:textAppearance="@style/widgetTextStyle"
            app:layout_columnWeight="1"
            tools:text="$ 00.00 "/>

    </GridLayout>



    <!-- empty Budget -->
    <TextView
        android:id="@+id/empty_widget"
        android:text="@string/empty_widget"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAppearance="@style/widgetwarningTextStyle"
        android:gravity="center_horizontal|center_vertical"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        />

</RelativeLayout>